<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_quiz_results">

    <LinearLayout
        android:id="@+id/quiz_results_top_control_bar"
        android:background="@color/subtitle_bar_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quiz_results_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textAppearance="@style/SectionHeader"
            android:textColor="@color/subtitle_bar_text_color"
            android:textStyle="bold"

            tools:text="You scored: 28% "/>

        <TextView
            android:id="@+id/quiz_results_baseline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/quiz_results_general_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/quiz_results_bottom_control_bar"
        android:layout_below="@id/quiz_results_top_control_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/quiz_stats"
                android:visibility="gone">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:background="@color/subtitle_bar_bg_color" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="-95dp"
                    android:layout_marginBottom="@dimen/list_card_vertical_padding"
                    android:foreground="@drawable/bg_selectable"
                    app:contentPaddingLeft="@dimen/list_card_horizontal_padding"
                    app:contentPaddingRight="@dimen/list_card_horizontal_padding"
                    app:contentPaddingTop="@dimen/list_card_vertical_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/info_threshold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            tools:text="70% pass threshold" />

                        <TextView
                            android:id="@+id/info_num_attempts"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            tools:text="Unlimited attempts" />

                        <include layout="@layout/view_quiz_stats" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_quiz_results_feedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                android:cacheColorHint="#00000000"
                tools:listitem="@layout/row_widget_quiz_feedback"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/quiz_results_bottom_control_bar"
        android:background="@color/background_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quiz_results_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/quiz_exit_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/widget_quiz_continue"
                />
        </LinearLayout>


        <TextView
            android:drawableStart="@android:drawable/ic_dialog_info"
            android:background="@color/theme_primary"
            android:textColor="@color/text_light"
            android:id="@+id/quiz_availability_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:visibility="gone" />
    </LinearLayout>

    

</RelativeLayout>
