...
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:progressDrawable="@drawable/progress_bar_light" />

                <TextView
                    android:id="@+id/tv_quiz_progress"
                    style="@style/SmallTextDark"
                    fontPath="fonts/montserrat.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
...
                    android:drawableStart="@drawable/ic_arrow_left"
                    app:drawableTint="@color/quiz_navigation_button"
                    android:text="@string/widget_quiz_prev"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/mquiz_next_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight=".5"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    app:drawableTint="@color/quiz_navigation_button"
...
