...
    <string name="title_scorecard">Scorecard</string>
    <string name="title_tag_select_activity">Select Category</string>
    <string name="version">Version: %1$s</string>
    <string name="title_download_media">Download Media</string>

    <string name="widget_feedback_submit">Submit</string>
    <string name="widget_feedback_submit_title">Thank you for submitting your feedback.</string>
    <string name="widget_feedback_unavailable_attempts">You have already sent your feedback</string>

    <string name="widget_quiz_next">Next</string>
    <string name="widget_quiz_prev">Prev</string>
    <string name="widget_quiz_getresults">Get Results</string>
    <string name="widget_quiz_noanswergiven">Please give an answer before moving to the next question</string>
    <string name="widget_quiz_progress">Question %1$d of %2$d</string>
...
