...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="4sp"
        android:text="2/2"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
